fixed footer overflow issue

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 /*FOOTER */
 .RedFooter {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   background: #C53338;
   display: flex;
   flex-direction: column;
